# MoneyPilot

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: backend-ci.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/agentic/: base_agent_function.py  base_agent_workflow.py
backend/app/schema/api/v1/: health.py
backend/app/schema/langgraph/: base_state.py
backend/app/schema/llm/: message.py  tool.py
backend/app/services/: llm_service.py  pydantic_ai_service.py  workflow_service.py
backend/app/services/llm/: __init__.py  client.py  tool_executor.py
backend/app/utils/: config.py  constants.py  exceptions.py  json_utils.py  logger.py  tool_registry.py
backend/tests/: conftest.py
backend/tests/app/: test_main.py
backend/tests/app/api/: test_health.py
backend/tests/app/schema/api/v1/: test_health.py
backend/tests/app/schema/llm/: test_message.py  test_tool.py
backend/tests/app/services/: test_llm_service.py  test_pydantic_ai_service.py
backend/tests/app/services/llm/: test_client.py  test_tool_executor.py  test_tool_executor_edge_cases.py
backend/tests/app/utils/: test_config.py  test_constants.py  test_exceptions.py  test_json_utils.py  test_logger.py  test_tool_registry.py
