[project]
name = "moneypilot"
version = "0.0.0"
description = "Watch as a team of unhinged AI agents manages a stock portfolio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langgraph>=0.6.2",
    "loguru>=0.7.3",
    "openai>=1.98.0",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.3.6",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
